# python-template

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  compose-dev.yaml  compose.yaml  docker-compose-dev.yaml  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: _deploy.yaml  _deploy_api.yaml  _deploy_transcriber.yaml  pull_request.yaml
api/: pyproject.toml
api/src/api/: .env.Development  .env.Local  Dockerfile  api_printer.py  application_environment.py  application_settings.py  dependency_container.py  main.py
api/src/api/workflows/products/: product_router.py
api/src/api/workflows/products/discontinue_product/: discontinue_product_workflow.py
api/src/api/workflows/products/publish_product/: publish_product_response.py  publish_product_workflow.py
api/tests/integration/: conftest.py
api/tests/integration/workflows/products/discontinue_product/: test_discontinue_product_workflow.py
api/tests/integration/workflows/products/publish_product/: test_publish_product_workflow.py
common/: pyproject.toml
database/: 00000001.sql
docs/: pre-commit.md  projects.md
domain/: pyproject.toml
domain/src/domain/: domain_printer.py  entity.py  product.py
domain/src/domain/entities/: product.py
domain/tests/unit/: test_product.py
notebooks/: notebook.ipynb
scripts/: main.py  pyproject.toml  script.py
src/python_archetype/api/: .env  .env.Staging  Dockerfile  application_settings.py  dependency_container.py  main.py
src/python_archetype/api/services/: some_common_service.py
src/python_archetype/api/workflows/products/: product_router.py
src/python_archetype/api/workflows/products/discontinue_product/: discontinue_product_workflow.py
src/python_archetype/api/workflows/products/publish_product/: publish_product_request.py  publish_product_workflow.py
src/python_archetype/common/: business_error.py
src/python_archetype/domain/entities/: product.py
src/python_seed/api/: .env.Development  .env.Staging  Dockerfile  application_settings.py  dependency_container.py  main.py
src/python_seed/api/workflows/products/: product_router.py
src/python_seed/api/workflows/products/discontinue_product/: discontinue_product_request.py  discontinue_product_workflow.py
src/python_seed/api/workflows/products/publish_product/: publish_product_workflow.py
src/python_seed/domain/entities/: product.py
src/python_template/api/: .env.Development  .env.Local  .env.Production  .env.local  Dockerfile  application_environment.py  application_settings.py  appsettings.production.json  dependency_container.py  main.py  service_collection_extensions.py  settings.development.json  settings.local.json  settings.staging.json
src/python_template/api/services/: email_service.py
src/python_template/api/workflows/products/: product_router.py
src/python_template/api/workflows/products/discontinue_product/: discontinue_product_request.py  discontinue_product_workflow.py
src/python_template/api/workflows/products/publish_product/: publish_product_response.py  publish_product_workflow.py
src/python_template/common/: business_error.py  business_errors.py
src/python_template/domain/: entities.py  entity.py
src/python_template/domain/entities/: product.py
test_utils/: pyproject.toml
test_utils/src/test_utils/builders/api/workflows/products/publish_product/: publish_product_request_builder.py
test_utils/src/test_utils/builders/domain/entities/: product_builder.py
tests/integration/: conftest.py
tests/integration/api/: conftest.py
tests/integration/api/workflows/products/discontinue_product/: test_discontinue_product_workflow.py
tests/integration/api/workflows/products/publish_product/: test_publish_product_workflow.py
tests/test_utils/builders/api/workflows/products/publish_product/: publish_product_request_builder.py
tests/test_utils/builders/domain/entities/: product_builder.py
tests/unit/domain/: test_product.py
tests/unit/domain/entities/: test_product.py
transcriber/: pyproject.toml
transcriber/src/transcriber/: transcriber_printer.py
