[project]
name = "python-architecture"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiohttp==3.12.14",
    "azure-cosmos==4.9.0",
    "common",
    "domain",
    "fastapi[standard-no-fastapi-cloud-cli]==0.116.1",
    "opentelemetry-instrumentation-fastapi==0.56b0",
    "poethepoet==0.36.0",
    "pydantic==2.11.7",
    "pydantic-settings[azure-key-vault]==2.10.1",
]

[dependency-groups]
dev = [
    "api",
    "jupyter==1.1.1",
    "pyright[nodejs]==1.1.403",
    "pytest==8.4.1",
    "pytest-asyncio==1.0.0",
    "pytest-cov==6.2.1",
    "pytest-mock==3.14.1",
    "ruff==0.12.3",
    "test-utils",
    "transcriber",
]

[tool.uv]
required-version = ">=0.7.19,<0.8.0"

[tool.uv.workspace]
members = ["api", "domain", "transcriber", "test_utils", "common", "scripts"]

[tool.uv.sources]
api = { workspace = true }
domain = { workspace = true }
transcriber = { workspace = true }
test-utils = { workspace = true }
common = { workspace = true }

[tool.pyright]
typeCheckingMode = "strict"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812", # missing-trailing-comma
    "D100",   # undocumented-public-module
    "D101",   # undocumented-public-class
    "D102",   # undocumented-public-method
    "D103",   # undocumented-public-function
    "D104",   # undocumented-public-package
    "D105",   # undocumented-magic-method
    "D106",   # undocumented-public-nested-class
    "D107",   # undocumented-public-init
    "E501",   # line-too-long
    "ICN",    # flake8-import-conventions
    "S101",   # assert
    "TRY003", # raise-vanilla-args
]


[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = ["unit: Unit tests", "integration: Integration tests"]

[tool.poe.tasks]
check-code.shell = "ruff check && ruff format --diff && pyright"
start-api-dev = "fastapi dev api/src/api/main.py"
start-api-pro.shell = "workers=$(nproc) && fastapi run --workers $workers api/src/api/main.py"
