[project]
name = "python-template"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.3",
    "asyncpg>=0.31.0",
    "azure-monitor-opentelemetry>=1.8.6",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.129.0",
    "pydantic>=2.12.5",
    "pydantic-settings[azure-key-vault]>=2.13.0",
    "wirio[fastapi,sqlmodel]>=0.13.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.1",
    "ty>=0.0.17",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv]
required-version = ">=0.10.0,<0.11.0"

[tool.ty.terminal]
error-on-warning = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812", # missing-trailing-comma
    "D100",   # undocumented-public-module
    "D101",   # undocumented-public-class
    "D102",   # undocumented-public-method
    "D103",   # undocumented-public-function
    "D104",   # undocumented-public-package
    "D105",   # undocumented-magic-method
    "D106",   # undocumented-public-nested-class
    "D107",   # undocumented-public-init
    "E501",   # line-too-long
    "ICN",    # flake8-import-conventions
    "S101",   # assert
    "TRY003", # raise-vanilla-args
    "TC",     # flake8-type-checking
    "FBT001", # boolean-type-hint-positional-argument
    "FBT002", # boolean-default-value-positional-argument
    "PT013",  #	pytest-incorrect-pytest-import
]

[tool.pytest]
strict = true
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
